
    HADOOP-9004. Allow security unit tests to use external KDC. (Stephen Chu
    via suresh)

    HADOOP-6616. Improve documentation for rack awareness. (Adam Faris via 
    jghoman)

    HADOOP-9075. FileContext#FSLinkResolver should be made static.
    (Arpit Agarwal via suresh)

    HADOOP-9093. Move all the Exception in PathExceptions to o.a.h.fs package.
    (suresh)

  BUG FIXES

    HADOOP-8177. MBeans shouldn't try to register when it fails to create MBeanName.
    (Devaraj K via umamahesh)

    HADOOP-7900. LocalDirAllocator confChanged() accesses conf.get() twice
    (Ravi Gummadi via Uma Maheswara Rao G)

    HADOOP-8146.  FsShell commands cannot be interrupted
    (Daryn Sharp via Uma Maheswara Rao G)

    HADOOP-8018.  Hudson auto test for HDFS has started throwing javadoc
    (Jon Eagles via bobby)

    HADOOP-8001  ChecksumFileSystem's rename doesn't correctly handle checksum
    files. (Daryn Sharp via bobby)

    HADOOP-8006  TestFSInputChecker is failing in trunk.
    (Daryn Sharp via bobby)

    HADOOP-7998. CheckFileSystem does not correctly honor setVerifyChecksum
    (Daryn Sharp via bobby)

    HADOOP-7606. Upgrade Jackson to version 1.7.1 to match the version required
    by Jersey (Alejandro Abdelnur via atm)

    HADOOP-7610. Fix for hadoop debian package (Eric Yang via gkesavan)

    HADOOP-7641. Add Apache License to template config files.
    (Eric Yang via atm)

    HADOOP-7621. alfredo config should be in a file not readable by users
    (Alejandro Abdelnur via atm)
    
    HADOOP-7669  Fix newly introduced release audit warning. 
    (Uma Maheswara Rao G via stevel)
    
    HADOOP-6220. HttpServer wraps InterruptedExceptions by IOExceptions 
    if interrupted in startup (stevel)

    HADOOP-7703. Improved exception handling of shutting down web server.
    (Devaraj K via Eric Yang)

    HADOOP-7704. Reduce number of object created by JMXJsonServlet.
    (Devaraj K via Eric Yang)
